# MITP2023

./: .gitignore  Attention Tutorial (Lightning Version).ipynb
Astro/: .gitignore  Spectral_Classifier.ipynb  pyproject.toml
Attention/: Attention Tutorial (Train).ipynb  Attention Tutorial.ipynb
Bayes/: .gitignore  BNN_lightning.ipynb  MITP_BNN_full.ipynb  MITP_BNN_stud.ipynb  pyproject.toml
GP/: pyproject.toml
Quantum/: 01_Intro_to_QC.ipynb  02_Intro_to_QC_2.ipynb  03_Grover_and_AmplitudeAmplification.ipynb  04_Optimisation_and_VQE.ipynb  Intro_to_QC.ipynb  Ising_Spin_Model.ipynb  QAOA.ipynb  VQC.ipynb  pyproject.toml
SR/: GPlearn.ipynb  Interpretable_ML_Tutorial.ipynb  julia.sh  pyproject.toml
Sequential/: .gitignore  SunStorm_Revisit.ipynb  SunStorm_Revisit_Schedule.ipynb  SunStorm_Revisit_analyze.ipynb  SunStorm_Revisit_analyze_schedule.ipynb  pyproject.toml
