[project]
name = ""
version = ""
description = ""
authors = [
    {name = "axect", email = "axect@outlook.kr"},
]
dependencies = [
    "numpy>=1.25.1",
    "matplotlib>=3.7.2",
    "pandas>=2.0.3",
    "astropy>=5.3.1",
    "notebook>=7.0.0",
    "torch>=2.0.1",
    "scikit-learn>=1.3.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

