[project]
name = ""
version = ""
description = ""
authors = [
    {name = "axect", email = "axect@outlook.kr"},
]
dependencies = [
    "notebook>=7.0.0",
    "torch>=2.0.1",
    "numpy>=1.25.1",
    "matplotlib>=3.7.2",
    "setuptools>=68.0.0",
    "lightning>=2.0.5",
    "wandb>=0.15.5",
    "torchinfo>=1.8.0",
    "pandas>=2.0.3",
    "pyarrow>=12.0.1",
    "scikit-learn>=1.3.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

