[project]
name = ""
version = ""
description = ""
authors = [
    {name = "axect", email = "axect@outlook.kr"},
]
dependencies = [
    "setuptools>=68.0.0",
    "gpytorch>=1.11",
    "matplotlib>=3.7.2",
    "notebook>=6.5.4",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

