[project]
name = ""
version = ""
description = ""
authors = [
    {name = "axect", email = "axect@outlook.kr"},
]
dependencies = [
    "qiskit[visualization]>=0.43.2",
    "pennylane>=0.31.0",
    "numpy>=1.23.5",
    "matplotlib>=3.7.2",
    "setuptools>=68.0.0",
    "notebook>=7.0.2",
    "qiskit-ibm-provider>=0.6.1",
    "scikit-learn>=1.3.0",
    "torch>=2.0.1",
    "pennylane-qulacs>=0.29.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

