[project]
name = ""
version = ""
description = ""
authors = [
    {name = "axect", email = "axect@outlook.kr"},
]
dependencies = [
    "pysr>=0.14.3",
    "accelerate>=0.21.0",
    "notebook>=6.5.4",
    "torch>=2.0.1",
    "matplotlib>=3.7.2",
    "scikit-learn>=1.3.0",
    "sympy>=1.12",
    "gplearn>=0.4.2",
    "graphviz>=0.20.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

