[project]
name = ""
version = ""
description = ""
authors = [
    {name = "axect", email = "axect@outlook.kr"},
]
dependencies = [
    "setuptools>=68.0.0",
    "matplotlib>=3.7.2",
    "numpy>=1.25.1",
    "pandas>=2.0.3",
    "torch>=2.0.1",
    "lightning>=2.0.5",
    "notebook>=7.0.0",
    "seaborn>=0.12.2",
    "pyarrow>=12.0.1",
    "plotly>=5.15.0",
    "statsmodels>=0.14.0",
    "accelerate>=0.21.0",
    "wandb>=0.15.5",
    "scikit-learn>=1.3.0",
    "torchinfo>=1.8.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

